Fixing the path

--- a/files/kfs-build.properties
+++ b/files/kfs-build.properties
@@ -1,1 +1,1 @@
-institution.build.properties.file=${user.home}/workspace/kfs/kfs-build.properties
+institution.build.properties.file=${user.home}/workspace/kfs-build.properties
